--- a/READYFORGO/pagestyle2.css
+++ b/READYFORGO/pagestyle2.css
@@ -63,6 +63,7 @@
     align-items: center;
     border-bottom: 2px solid #f0f0f0;
     margin-bottom: 15px;
+    flex-wrap:wrap;
 }
 
 .category-flairs span {
